css/main.css
/* ... */
.button-1 {

}

.button-2 {

    display: flex;
    position: relative;
    padding: 0.8rem 1.6rem ;
    justify-content: space-between;
    align-items: center;
    flex: 1 0 0;
    border-radius: var(--radius-xl);
    background: var(--grey-2);
    height: 4rem;
    cursor: pointer;
    user-select: none; /* Prevent text selection */
    transition: background-color 0.3s, padding 500ms;
    filter: var(--shadow-dark-0);

    &:hover {
        background-color: var(--grey-3);
        filter: var(--shadow-dark-1);
    }

    &:active {
        background-color: var(--grey-2);
    }

    @media (max-width:500px){
        padding: 0.8rem 1.2rem ;
    }
    &::after {
        width: 2.4rem;
        height: 2.4rem;
        position: absolute;
        right: 1.6rem;
        transition: width 500ms, height 500ms, right 500ms;
    }


    & .button-container {
        display: flex;
        & p {
            margin: 0;
            padding-left: 3.2rem;
            @media (max-width:500px){
                font-size: 1.2rem;
            }
        }
        &::before {
            position: absolute;
            left: 1.6rem;
            transition: width 500ms, height 500ms, left 500ms;
        }

        &:has(.button-text)::before {
            width: 2.4rem;
            height: 2.4rem;
        }

        &:has(#button-filter-number)::before {
            content: url('../icons/filter_x24.svg');
        }

        &:has(#button-filter-concert-location)::before {
            width: 1.6rem;
            height: 1.6rem;
            top: 27%;
            content: url('../icons/map-marker_x16.svg');
        }
    }



    &#button-filter{
        min-width: 15rem;
        max-width: 22rem;
        transition: max-width, 0.3s;

        @media (max-width: 500px) {
            max-width: 16rem;
        }
    }
    &#button-filter::after {
        width: 2.4rem;
        height: 2.4rem;
        content: var(--pseudo-icon) !important;
    }

    &#button-filter-checkbox::after {
       content: url('../icons/search_x16.svg');
        width: 1.6rem;
        height: 1.6rem;
        top: 27%;
    }
    &#album-start-date, &#artist-start-date {
        &::after {
            width: 1.6rem;
            height: 1.6rem;
            content: url('../icons/calendar_x16.svg');
            display: flex;
            justify-content: center;
            align-self: center;
            align-content: center;
            align-items: center;
        }
    }
}

.button-text {
    text-wrap: nowrap;
    width: max-content;
}

@media (max-width: 500px) {

    .button-container::before {
        width: 1.6rem !important;
        height: 1.6rem !important;
        top: 26%;
    }

    .button-2::after {
        width: 1.6rem !important;
        height: 1.6rem !important;
        top: 26%;
    }

    #button-filter::after {
        content: var(--pseudo-icon) !important;
    }
    #button-filter-checkbox::after {
        content: url('../icons/search_x16.svg') !important;
    }
    #button-filter-container::before {
        content: url('../icons/filter_x16.svg')!important;
    }
    #button-filter-checkbox-container::before {
        content: url('../icons/map-marker_x16.svg')!important;
    }
}

.filter-label-sm {
    width: 8rem;
    text-align: center;
    justify-content: center;


    @media (max-width: 800px) {
        width: 3.2rem;
    }
}

.filter-label-md {
    padding: 0;
    width: 15rem;
}


/* switch button styling */

.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

/* The slider */
.slider-button {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--white-0);
    -webkit-transition: .4s;
    transition: background-color .4s, transform .4s;
    height: 3.4rem;
    filter: var(--shadow-light-0);
}

.slider-button {
    &::before {
        position: absolute;
        content: "";
        height: 2.6rem;
        width: 2.6rem;
        left: 0.4rem;
        bottom: 0.4rem;
        background-color: var(--green-0);
        -webkit-transition: .4s;
        transition: background-color .4s, transform .4s;
    }
    &.round {
        border-radius: 34px;
        &:before {
            border-radius: 50%;
        }

    }
}

input:checked + .slider-button {
    background-color: var(--green-0);
}

input:focus-visible + .slider-button {
    box-shadow: 0 0 1px var(--green-3);
}

input:checked + .slider-button:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
    background-color: var(--white-0);
}

.slider-button.round {
    border-radius: 34px;
}





/* double range slider styling */

.double-slider-container {
    max-width: 100%;
}

input[type='range'] {
    cursor: pointer;
    outline: none;
}
input[type='range'],
input[type='range']::-webkit-slider-runnable-track,
input[type='range']::-webkit-slider-thumb {
    -webkit-appearance: none;
    background: var(--filter-bar);
}
input[type='range']::-webkit-slider-runnable-track {
    width: 100%;
    height: 0;
    background: none;
    z-index:1;
}

input[type='range']:nth-child(2)::-webkit-slider-runnable-track{
    background: none;
    z-index: 0;
}

input[type='range']::-webkit-slider-thumb {
    position: relative;
    height: 2.4rem;
    width: 2.4rem;
    margin-top: -1.2rem;
    border-radius: 50%;
    z-index: 1;
}

#members-min-range::-webkit-slider-thumb {
    background: var(--green-0);
    filter: var(--shadow-dark-0);
    z-index: 1;
}
#members-max-range::-webkit-slider-thumb {
    background: var(--green-1);
    filter: var(--shadow-dark-0);
    z-index: 2;
}
/* ... */

